--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -35,6 +35,7 @@
         </div>
       </div>
       <button type="submit" class="btn btn-primary w-100">Login</button>
+       <button type="submit" class="btn btn-primary w-100">Reset</button>
     </form>
   </div>
 </div>
