--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -35,7 +35,8 @@
         </div>
       </div>
       <button type="submit" class="btn btn-primary w-100">Login</button>
-       <button type="submit" class="btn btn-primary w-100">Reset</button>
+      <P> Hema Keerthana</P>
+
     </form>
   </div>
 </div>
