--- a/src/app/dashboard/about-us/about-us.component.html
+++ b/src/app/dashboard/about-us/about-us.component.html
@@ -1,7 +1,7 @@
 <div class="background-container">
   <p>It is created</p>
 </div>
-
+<div>Hema created this to keerthana</div>
 
 <!--<img src="{{ Imagepath }}" height="500px"/>
 
