--- a/src/app/dashboard/about-us/about-us.component.html
+++ b/src/app/dashboard/about-us/about-us.component.html
@@ -4,6 +4,7 @@
 <div>Hema created this to keerthana</div>
 
 <h1>Heloo Welcome Namsthe</h1>
+<h2>Can you help</h2>
 
 <!--<img src="{{ Imagepath }}" height="500px"/>
 
