--- a/src/app/dashboard/about-us/about-us.component.html
+++ b/src/app/dashboard/about-us/about-us.component.html
@@ -7,6 +7,11 @@
 <h2>Can you help</h2>
 <h2>Helllo</h2>
 
+<h1>Hema And Keerthana are lazy girls</h1>
+
+<button>Submit</button>
+
+
 <!--<img src="{{ Imagepath }}" height="500px"/>
 
 <div>
